<resources>
    <string name="CODE_PUSH_APK_BUILD_TIME">1753976448727</string>
    <string name="CodePushDeploymentKey">ANDROID_REVO_PUSH_DEPLOYMENT_KEY</string>
    <string name="CodePushServerUrl">https://api.revopush.org</string>
    <string name="_API_KEY_">AIzaSyDi6n2800QqxubOHfLQypWEEcQ9titfgwU</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_description">Alert</string>
    <string name="ampm_description">Select AM/PM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aplication_name">Tenpo</string>
    <string name="app_name">Tenpo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_statements">[{ \"include\": \"https://tenpo.page.link/.well-known/assetlinks.json\" }]</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\n</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open Debugger</string>
    <string name="catalyst_debug_open_disabled">Connect to the bundler to debug JavaScript</string>
    <string name="catalyst_dev_menu_header">React Native Dev Menu (%1$s)</string>
    <string name="catalyst_dev_menu_sub_header">Running %1$s</string>
    <string name="catalyst_dismiss_button">Dismiss\n(ESC)</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector_toggle">Toggle Element Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_open_debugger_error">Failed to open debugger. Please check that the dev server is running and reload the app.</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">Reload\n(R, R)</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_toggle">Toggle Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="ct_fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="ct_permission_not_available_message">You have previously denied notification permission. Please go to settings to enable notifications.</string>
    <string name="ct_permission_not_available_open_settings_option">Settings</string>
    <string name="ct_permission_not_available_title">Permission Not Available</string>
    <string name="ct_txt_cancel">Cancel</string>
    <string name="onfido_avc_intro_button_primary_ready">Start recording</string>
    <string name="onfido_avc_intro_disclaimer">Your face and your background will be recorded during this process</string>
    <string name="onfido_avc_intro_list_item_one">First, position your face in the frame</string>
    <string name="onfido_avc_intro_list_item_one_accessibility">First, you will have to position your face in front of your device</string>
    <string name="onfido_avc_intro_list_item_two">Then, turn your head slowly to both sides</string>
    <string name="onfido_avc_intro_list_item_two_accessibility">Then, you will have to turn your head slowly to both sides</string>
    <string name="onfido_avc_intro_subtitle">This is to verify that you’re a real person</string>
    <string name="onfido_avc_intro_title">Record a video</string>
    <string name="onfido_avc_intro_title_accessibility">Record a video of your face</string>
    <string name="onfido_avc_no_face_detected_button_primary_restart">Restart recording</string>
    <string name="onfido_avc_no_face_detected_list_item_eyes">Make sure your eyes are clearly visible</string>
    <string name="onfido_avc_no_face_detected_list_item_face">Make sure to only show your face, we don’t need to see your ID</string>
    <string name="onfido_avc_no_face_detected_list_item_face_accessibility">Make sure to only show your face, we don’t need to see your Identity Document</string>
    <string name="onfido_avc_no_face_detected_list_item_lighting">Make sure to be in a place with good lighting</string>
    <string name="onfido_avc_no_face_detected_list_item_mask">Make sure to remove masks or other items that cover your face. Eyeglasses are okay</string>
    <string name="onfido_avc_no_face_detected_title">We can\'t detect your face</string>
    <string name="onfido_doc_select_button_address_card">Address card</string>
    <string name="onfido_doc_select_button_address_card_detail">Temporary and permanent cards are accepted</string>
    <string name="onfido_doc_select_button_bank_statement">Bank or building society statement</string>
    <string name="onfido_doc_select_button_benefits_letter">Benefits Letter</string>
    <string name="onfido_doc_select_button_benefits_letter_detail">Government authorized household benefits e.g. Job seeker allowance, Housing benefit, Tax credits</string>
    <string name="onfido_doc_select_button_bill">Utility Bill</string>
    <string name="onfido_doc_select_button_bill_detail">Gas, electricity, water, landline, or broadband</string>
    <string name="onfido_doc_select_button_tax_letter">Local Government Tax Letter</string>
    <string name="onfido_doc_select_extra_estatements_ok">e-statements accepted</string>
    <string name="onfido_doc_select_subtitle_poa">These are the documents most likely to show your current home address</string>
    <string name="onfido_poa_guidance_instructions_address">Current address</string>
    <string name="onfido_poa_guidance_instructions_full_name">Full name</string>
    <string name="onfido_poa_guidance_instructions_issue_date">Issue date or summary period</string>
    <string name="onfido_poa_guidance_instructions_label">Capture the entire document and make sure it clearly shows:</string>
    <string name="onfido_poa_guidance_instructions_logo">Logo</string>
    <string name="onfido_poa_guidance_subtitle_benefits_letter">Must have been issued in the last 12 months</string>
    <string name="onfido_poa_type_selection_title_uk">Select a UK document</string>
    <string name="onfido_poa_upload_instructions_take_photo_button">Take photo</string>
    <string name="onfido_poa_upload_instructions_upload_button">Upload</string>
</resources>