<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1"
        style="@style/OnfidoShadowedScrollStyle">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginHorizontal="16dp">
            <com.onfido.android.sdk.capture.component.active.video.capture.presentation.capture.view.headturn.OnfidoAnimWebView
                android:layout_gravity="center_horizontal"
                android:id="@+id/animWebView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="@dimen/onfido_welcome_title_top_margin"
                android:layout_marginBottom="32dp"/>
            <TextView
                android:id="@+id/motion_intro_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/onfido_avc_intro_title"
                android:contentDescription="@string/onfido_avc_intro_title_accessibility"
                android:accessibilityHeading="true"
                style="@style/OnfidoTextStyle.Title.Large"/>
            <TextView
                android:id="@+id/motion_intro_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/onfido_avc_intro_subtitle"
                style="@style/OnfidoTextStyle.Subtitle.Medium.Secondary"/>
            <TextView
                android:id="@+id/motion_intro_guidance_bullet_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/onfido_avc_intro_list_item_one"
                android:contentDescription="@string/onfido_avc_intro_list_item_one_accessibility"
                style="@style/OnfidoTextStyle.Body.Regular.Bullet"/>
            <TextView
                android:id="@+id/motion_intro_guidance_bullet_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/onfido_avc_intro_list_item_two"
                android:contentDescription="@string/onfido_avc_intro_list_item_two_accessibility"
                style="@style/OnfidoTextStyle.Body.Regular.Bullet"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/introDisclaimerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/onfido_avc_intro_disclaimer"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/onfido_ic_info_disclaimer"
                style="@style/OnfidoTextStyle.Body.Compact.Disclaimer"/>
        </LinearLayout>
    </com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView>
    <com.onfido.android.sdk.capture.ui.widget.OnfidoButton
        android:id="@+id/motionIntroStartRecordingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/onfido_button_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/onfido_button_horizontal_margin"
        android:layout_marginHorizontal="@dimen/onfido_button_horizontal_margin"
        app:onfidoButtonText="@string/onfido_avc_intro_button_primary_ready"/>
    <include layout="@layout/onfido_watermark_layout"/>
</LinearLayout>
