<?xml version="1.0" encoding="utf-8"?>
<com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="start"
            android:id="@+id/poaDocumentTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/onfido_activity_horizontal_margin"
            android:layout_marginTop="@dimen/onfido_document_selection_margin_top"
            android:layout_marginRight="@dimen/onfido_activity_horizontal_margin"
            android:text="@string/onfido_poa_type_selection_title_uk"
            android:layout_marginHorizontal="@dimen/onfido_activity_horizontal_margin"
            android:accessibilityHeading="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/OnfidoTextStyle.Title.Large"/>
        <TextView
            android:id="@+id/poaDocumentSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/onfido_activity_horizontal_margin"
            android:layout_marginTop="@dimen/onfido_document_selection_icon_margin_vertical"
            android:layout_marginRight="@dimen/onfido_activity_horizontal_margin"
            android:text="@string/onfido_doc_select_subtitle_poa"
            android:layout_marginHorizontal="@dimen/onfido_activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaDocumentTitle"
            style="@style/OnfidoTextStyle.Subtitle.Medium"/>
        <View
            android:id="@+id/poaSeparator"
            android:layout_marginTop="@dimen/onfido_document_selection_list_margin_top"
            app:layout_constraintBottom_toTopOf="@+id/poaDocTypes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaDocumentSubtitle"
            style="@style/OnfidoSeparator"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/poaDocTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/poaDocumentTitle"
            app:layout_constraintTop_toBottomOf="@+id/poaSeparator">
            <com.onfido.android.sdk.capture.document.selection.DocumentSelectionButton
                android:id="@+id/poaBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:onfidoDescription="@string/onfido_doc_select_extra_estatements_ok"
                app:onfidoIcon="@drawable/onfido_poa_bank"
                app:onfidoTitle="@string/onfido_doc_select_button_bank_statement"
                app:onfidoTitleBold="true"/>
            <View
                android:id="@+id/poaBankSeparator"
                style="@style/OnfidoSeparator"/>
            <com.onfido.android.sdk.capture.document.selection.DocumentSelectionButton
                android:id="@+id/poaUtilityBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:onfidoDescription="@string/onfido_doc_select_button_bill_detail"
                app:onfidoIcon="@drawable/onfido_poa_utility_bill"
                app:onfidoTitle="@string/onfido_doc_select_button_bill"
                app:onfidoTitleBold="true"/>
            <View
                android:id="@+id/poaUtilityBillSeparator"
                style="@style/OnfidoSeparator"/>
            <com.onfido.android.sdk.capture.document.selection.DocumentSelectionButton
                android:id="@+id/poaCouncilTaxLetter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:onfidoIcon="@drawable/onfido_poa_general_letter"
                app:onfidoTitle="@string/onfido_doc_select_button_tax_letter"
                app:onfidoTitleBold="true"/>
            <View
                android:id="@+id/poaCouncilTaxLetterSeparator"
                style="@style/OnfidoSeparator"/>
            <com.onfido.android.sdk.capture.document.selection.DocumentSelectionButton
                android:id="@+id/poaBenefitsLetter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:onfidoDescription="@string/onfido_doc_select_button_benefits_letter_detail"
                app:onfidoIcon="@drawable/onfido_poa_general_letter"
                app:onfidoTitle="@string/onfido_doc_select_button_benefits_letter"
                app:onfidoTitleBold="true"/>
            <View
                android:id="@+id/poaBenefitsLetterSeparator"
                style="@style/OnfidoSeparator"/>
            <com.onfido.android.sdk.capture.document.selection.DocumentSelectionButton
                android:id="@+id/poaAddressCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:onfidoDescription="@string/onfido_doc_select_button_address_card_detail"
                app:onfidoIcon="@drawable/onfido_poa_address_card"
                app:onfidoTitle="@string/onfido_doc_select_button_address_card"
                app:onfidoTitleBold="true"/>
            <View
                android:id="@+id/poaAddressCardSeparator"
                style="@style/OnfidoSeparator"/>
        </LinearLayout>
        <com.onfido.android.sdk.capture.ui.widget.WatermarkView
            android:id="@+id/poaWatermark"
            android:layout_marginTop="@dimen/onfido_spacing_1x"
            android:layout_marginBottom="@dimen/onfido_watermark_bottom_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaDocTypes"
            app:layout_constraintVertical_bias="1"
            style="@style/OnfidoWatermarkStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView>
