<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1"
        style="@style/OnfidoShadowedScrollStyle">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/noFaceDetectedErrorIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:importantForAccessibility="no"
                style="@style/OnfidoIconStyle.Error"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="36dp"
                android:text="@string/onfido_avc_no_face_detected_title"
                android:layout_marginHorizontal="32dp"
                android:accessibilityHeading="true"
                style="@style/OnfidoTextStyle.Title.Small"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/onfido_avc_no_face_detected_list_item_lighting"
                app:drawableLeftCompat="@drawable/onfido_ic_avc_sun"
                style="@style/OnfidoAvcTimeoutItem"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/onfido_avc_no_face_detected_list_item_eyes"
                app:drawableLeftCompat="@drawable/onfido_ic_avc_eye"
                style="@style/OnfidoAvcTimeoutItem"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/onfido_avc_no_face_detected_list_item_mask"
                app:drawableLeftCompat="@drawable/onfido_ic_avc_mask"
                style="@style/OnfidoAvcTimeoutItem"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/onfido_avc_no_face_detected_list_item_face"
                android:contentDescription="@string/onfido_avc_no_face_detected_list_item_face_accessibility"
                app:drawableLeftCompat="@drawable/onfido_ic__avc_face"
                style="@style/OnfidoAvcTimeoutItem"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView>
    <com.onfido.android.sdk.capture.ui.widget.OnfidoButton
        android:id="@+id/noFaceDetectedStartRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/onfido_button_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/onfido_button_horizontal_margin"
        android:layout_marginHorizontal="@dimen/onfido_button_horizontal_margin"
        app:onfidoButtonText="@string/onfido_avc_no_face_detected_button_primary_restart"/>
    <include layout="@layout/onfido_watermark_layout"/>
</LinearLayout>
