<?xml version="1.0" encoding="utf-8"?>
<com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/onfido_activity_horizontal_margin"
        android:layout_marginRight="@dimen/onfido_activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/onfido_activity_horizontal_margin">
        <TextView
            android:id="@+id/poaDocumentDetailsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_document_selection_margin_top"
            android:text="@string/onfido_doc_select_button_bank_statement"
            android:accessibilityHeading="true"
            app:layout_constraintBottom_toTopOf="@+id/poaInfoIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/OnfidoTextStyle.Title.Large"/>
        <ImageView
            android:id="@+id/poaInfoIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_proof_of_address_document_details_margin_top"
            android:src="@drawable/onfido_ic_info_filled_24"
            app:layout_constraintStart_toStartOf="@+id/poaDocumentDetailsTitle"
            app:layout_constraintTop_toBottomOf="@+id/poaDocumentDetailsTitle"/>
        <TextView
            android:textSize="@dimen/onfido_proof_of_address_document_details_size"
            android:id="@+id/poaDocumentDetailsSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/onfido_poa_guidance_subtitle_benefits_letter"
            android:layout_marginStart="@dimen/onfido_proof_of_address_document_details_margin_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poaInfoIcon"
            app:layout_constraintTop_toTopOf="@+id/poaInfoIcon"
            style="@style/OnfidoTextStyle.Subtitle.Medium"/>
        <TextView
            android:id="@+id/poaCaptureTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_proof_of_address_document_details_margin_top"
            android:text="@string/onfido_poa_guidance_instructions_label"
            app:layout_constraintBottom_toTopOf="@+id/poaCaptureBullet1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaDocumentDetailsSubTitle"
            style="@style/OnfidoTextStyle.Subtitle.Medium"/>
        <TextView
            android:id="@+id/poaCaptureBullet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_proof_of_address_document_details_bullet_margin"
            android:text="@string/onfido_poa_guidance_instructions_logo"
            android:drawablePadding="@dimen/onfido_proof_of_address_document_details_bullet_padding"
            app:layout_constraintBottom_toTopOf="@+id/poaCaptureBullet2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaCaptureTv"
            style="@style/OnfidoTextStyle.Subtitle.Bullet"/>
        <TextView
            android:id="@+id/poaCaptureBullet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_proof_of_address_document_details_bullet_margin"
            android:text="@string/onfido_poa_guidance_instructions_full_name"
            android:drawablePadding="@dimen/onfido_proof_of_address_document_details_bullet_padding"
            app:layout_constraintBottom_toTopOf="@+id/poaCaptureBullet3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaCaptureBullet1"
            style="@style/OnfidoTextStyle.Subtitle.Bullet"/>
        <TextView
            android:id="@+id/poaCaptureBullet3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_proof_of_address_document_details_bullet_margin"
            android:text="@string/onfido_poa_guidance_instructions_address"
            android:drawablePadding="@dimen/onfido_proof_of_address_document_details_bullet_padding"
            app:layout_constraintBottom_toTopOf="@+id/poaCaptureBullet4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaCaptureBullet2"
            style="@style/OnfidoTextStyle.Subtitle.Bullet"/>
        <TextView
            android:id="@+id/poaCaptureBullet4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onfido_proof_of_address_document_details_bullet_margin"
            android:layout_marginBottom="@dimen/onfido_proof_of_address_document_details_take_photo_margin_top"
            android:text="@string/onfido_poa_guidance_instructions_issue_date"
            android:drawablePadding="@dimen/onfido_proof_of_address_document_details_bullet_padding"
            app:layout_constraintBottom_toTopOf="@+id/poaButtonsContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaCaptureBullet3"
            app:layout_constraintVertical_bias="0"
            style="@style/OnfidoTextStyle.Subtitle.Bullet"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/poaButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poaCaptureBullet4">
            <com.onfido.android.sdk.capture.ui.widget.OnfidoButton
                android:id="@+id/takePhotoButton"
                app:onfidoButtonText="@string/onfido_poa_upload_instructions_take_photo_button"
                style="@style/OnfidoFlatButton.NoMargin"/>
            <com.onfido.android.sdk.capture.ui.widget.OnfidoButton
                android:id="@+id/uploadButton"
                android:layout_marginTop="@dimen/onfido_spacing_1x"
                app:onfidoButtonText="@string/onfido_poa_upload_instructions_upload_button"
                app:onfidoButtonType="secondary"
                style="@style/OnfidoFlatButton.NoMargin"/>
            <com.onfido.android.sdk.capture.ui.widget.WatermarkView
                android:id="@+id/poaWatermark"
                android:layout_marginTop="@dimen/onfido_spacing_1x"
                android:layout_marginBottom="@dimen/onfido_watermark_bottom_margin"
                style="@style/OnfidoWatermarkStyle"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.onfido.android.sdk.capture.ui.widget.ShadowedScrollView>
